# Rubik-s-Cube-python

./: .gitignore  Cube.py  Cube3d.py  Cube_IDA_solver.py  Cube_solver.py  IDA_solver.py  NN_input.txt  NN_target.txt  NeuralNet.m  README.md  Rubik_heuristic_NN.py  Solver.py  bibliography.txt  config.json  cube.py  cubeTextInterface.py  get_NN_train_data.py  matrixMethods.py  neural_solver.py  pyproject.toml  requirements.txt  rubikNotation.py  solve_IRL_cube.py  solver_stats.txt
CVsystem/: ARsystem.py  __init__.py  clusterization.py  cube_calibration.py  image_processing_utils.py  image_to_cube.py  outlier_detection.py  real_time_border_test.py  real_time_segmentation_test.py  scan_cube.py  video_input.py
Heuristic_NN/: 3x3HeuristicModel.pt.bak  Rubik_heuristic_NN.py  Rubik_heuristic_NN_regression.py  Rubik_heuristic_SVM.py  gen_NN_train_data.py
IDA_NNSolver/: IDA_NNSolver.py  Rubik_heuristic_NN.py  Rubik_heuristic_NN_regression.py  Rubik_heuristic_SVM.py  __init__.py  evaluate_NN.py  gen_NN_train_data.py  take_data_subset.py  test.txt
IDA_SVMSolver/: Rubik_heuristic_SVM.py
IDA_Solver/: IDA_Solver.py
IDA_neural_solver/: IDA_neural_solver.py  Rubik_heuristic_NN.py  gen_NN_train_data.py
Korf_Solver/: Korf_Solver.py
Korf_solver/: Cube3d.py  Korf_solver.py
MCTS_solver/: mcts_solver.py
RNN_solver/: RNN_train.py  Rubik_solver_RNN.py
Solver_NN/: Rubik_solver_RNN.py  gen_RNN_train_data.py
configs/: config_ida.json  config_nn.json
scripts/: gen_train_data.py  search_identities.py  take_data_subset.py
training_data/: gen_train_data.py
(+21 files in other folders)
