[project]
name = "rubiks_cube"
version = "0.2.2"
description = "Solvers for the rubiks cube and a computer vision system to solve it in real time."
readme = "README.md"
authors = [
    { name = "eugenioLR", email = "eugeniolorente0@gmail.com" }
]

requires-python = ">=3.10"
dependencies = [
    "joblib==1.2.0",
    "matplotlib==3.5.1",
    "numpy==1.22.0",
    "opencv_python==4.5.5.62",
    "pandas==1.3.4",
    "scikit_learn==1.0.2",
    "scipy==1.7.2",
    "torch==1.13.1",
]

[project.scripts]
rubikCLI = "rubiks_cube.cubeTextInterface:main"
rubikSolver-CV = "rubiks_cube.solve_IRL_cube:main"